<resources>
    <string name="app_name">Minesweeper</string>
    <string name="new_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="about">About</string>
    <string name="exit">Quit</string>
    <string name="novice">Easy</string>
    <string name="normal">Normal</string>
    <string name="expert">Expert</string>
    <string name="back">Back</string>
    <string name="title_level_menu">Select Level</string>
    <string name="ok">Ok</string>
    <string name="you_lose">You Lose</string>
    <string name="you_win">You Win</string>
    <string name="title_about">About</string>
    <string name="content_about">This game is developed by: </string>
    <string name="jimmy">Jimmy Banchon Zambrano</string>
    <string name="renebal">Rene Balda Tarira</string>
</resources>
