<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/dialogback">

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp"
        android:text="@string/title_about"
        android:id="@+id/Title"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:textColor="#AA000000"
        android:layout_width="wrap_content"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:text="@string/content_about"
        android:id="@+id/content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:textColor="#AA000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/jimmy"
        android:id="@+id/jimmy"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:textColor="#AA000000"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/renebal"
        android:id="@+id/rene"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_margin="15dp"
        android:background="@drawable/button_states"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:id="@+id/accept"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:singleLine="false"
        android:text="@string/ok"
        android:layout_centerHorizontal="true"/>



</LinearLayout>