<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="50dp"
    >

    <Button
        android:layout_margin="5dp"
        android:background="@drawable/button_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="50sp"
        android:id="@+id/start_game"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_margin="5dp"
        android:background="@drawable/button_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/high_scores"
        android:id="@+id/high_scores"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_margin="5dp"
        android:background="@drawable/button_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        />
    <Button
        android:layout_margin="5dp"
        android:background="@drawable/button_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        />
</LinearLayout>